hphp/hack/test/typecheck/contravariance_bad1.php.exp
File "", line 0, characters 0--1:
Some type constraint(s) here are violated (Typing[4110])
File "contravariance_bad1.php", line 16, characters 17-17:
'T' is a constrained type
File "contravariance_bad1.php", line 16, characters 22-22:
This is an object of type A
File "contravariance_bad1.php", line 32, characters 16-16:
It is incompatible with an object of type B
